Adds recipes page

--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -448,13 +448,15 @@
     This means, to see logs or debug function executions you need to use the <code>context.log()</code> and <code>context.error()</code> methods.
     These logs are only visible to developers with access to the Appwrite Console.
 </p>
--> LIST WHAT WE SHOW AND WHAT WE DONT SHOW
 
+<p>Here's an example of using logs and errors.</p>
+[TODO]
+<p>You can access these logs through the following steps.</p>
+[TODO]
 <h2><a href="#environment-variables" id="environment-variables">Accessing Environment Variables</a></h2>
 <p>
     If you need to pass constants or secrets to Appwrite Functions, you can use environment variables.
 </p>
-
 [TODO: ways to setup environment variables (link to deployment docs?)]
 
 <p>
