Fill in intro of recipes

--- a/app/views/docs/functions-recipes.phtml
+++ b/app/views/docs/functions-recipes.phtml
@@ -3,4 +3,4 @@
     Behind the simple workflow hides some useful recipes that can help you accomplish your goals faster.
     Take a look at the following.
 </p>
-[TODO: @matej]
+[TODO: @matej @luke -> Let's have some simple recipes here for common actions]
