--- a/app/views/docs/functions-recipes.phtml
+++ b/app/views/docs/functions-recipes.phtml
@@ -4,3 +4,4 @@
     Take a look at the following.
 </p>
 [TODO: @matej @luke -> Let's have some simple recipes here for common actions]
+[TODO: @matej @luke -> Example with JWT, show both client and server code] 
