Add manual install command

--- a/app/views/docs/functions-runtimes.phtml
+++ b/app/views/docs/functions-runtimes.phtml
@@ -9,8 +9,8 @@ $runtimes = $this->getParam('runtimes', []);
 
 
 <p>
-    Appwrite Functions supports ...
-    wait. wut we do with runtimes not yet on cloud???
+    Appwrite Functions supports an extensive list of runtimes to meet your unique tech preferences.
+    Not all runtimes are available on Appwrite Cloud, check for the <code>Cloud</code> label in each listed runtime to know whichones are available.
 </p>
 
 <h2><a href="/docs/functions#supportedRuntimes" id="supportedRuntimes">Supported Runtimes</a></h2>
