Start work on Firebase docs

--- a/app/views/docs/migration.phtml
+++ b/app/views/docs/migration.phtml
@@ -56,5 +56,5 @@
 
 <h2><a href="#limitations" id="limitations">Limitations</a></h2>
 <p>
-    [TODO] @bradley help me out here. include performance, feature, all things annoying
+    - Migrations cannot transfer all data perfectly, so certain fields, such as $createdAt and $updatedAt, may not be transferred. More information can be found on the migration page for each source.
 </p>
