--- a/app/views/docs/migration-firebase.phtml
+++ b/app/views/docs/migration-firebase.phtml
@@ -1,3 +1,59 @@
+<h2><a href="#notices" id="notices">Things to keep in mind</a></h2>
 <p>
-    [TODO: Bradley try to fill this in with necessary information + limitations]
+    - Appwrite will waive usage fees during the migration process, however Firebase may still charge you for usage on their platform.
+
+    - At the moment only top level document migrations are supported. Nested documents will not be transferred at this moment.
+
+    - Appwrite migrations only supports Firestore. Realtime Database is not supported at this time.
+
+    - OAuth users will not be transferred. You will need to re-authenticate with your OAuth provider after the migration is complete.
+</p>
+
+<h2><a href="#resources" id="resources">Supported Resources</a></h2>
+<table>
+<thead>
+  <tr>
+    <th></th>
+    <th>Users</th>
+    <th>Databases</th>
+    <th>Documents</th>
+    <th>Files</th>
+    <th>Functions</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>Firebase</td>
+    <td>✅</td>
+    <td>✅</td>
+    <td>✅</td>
+    <td>✅</td>
+    <td></td>
+  </tr>
+</tbody>
+</table>
+
+<h2><a href="#migration-process" id="migration-process">Migrating to Appwrite from Firebase</a></h2>
+<p>
+    To begin migrating to Appwrite make sure to read the <a href="/docs/migration">migration overview</a> and
+    <a href="#notices">things to keep in mind</a> sections above.
+
+    To begin you can either migrate while creating a new project or go into your project settings and click on the "Migrations" tab.
+
+    Next click on the "Create Migration" button and select "Firebase" as your source.
+
+    <h3><a href="#cloud" id="cloud">Migrating to Appwrite Cloud</a></h3>
+    To simplify the migration process we have created an OAuth application that will allow you to sign in with Google and automatically
+    discover your Firebase projects then you can simply just select the project you want to migrate from.
+
+    <h3><a href="#self-hosted" id="self-hosted">Migrating to Appwrite Self-Hosted</a></h3>
+    If you are self-hosting Appwrite you will need to create a service account in your Firebase project and download the JSON file.
+
+    To create a service account navigate to your Firebase console then click on the gear icon and select "Project Settings".
+    Next click on the "Service Accounts" tab and click on the "Generate New Private Key" button to download the JSON file.
+
+    <!-- TODO: Double check if all permissions are added on the default service account or if we need to add them manually -->
+
+    Once you have the JSON file downloaded you can click on "Manual Authentication" while going through the migration process and\
+    upload the JSON file.
 </p>
