Did some formatting

--- a/app/views/docs/migration-firebase.phtml
+++ b/app/views/docs/migration-firebase.phtml
@@ -1,15 +1,20 @@
-<h2><a href="#notices" id="notices">Things to keep in mind</a></h2>
 <p>
-    - Appwrite will waive usage fees during the migration process, however Firebase may still charge you for usage on their platform.
-
-    - At the moment only top level document migrations are supported. Nested documents will not be transferred at this moment.
-
-    - Appwrite migrations only supports Firestore. Realtime Database is not supported at this time.
-
-    - OAuth users will not be transferred. You will need to re-authenticate with your OAuth provider after the migration is complete.
+  Moving your project from Firebase to Appwrite?
+  Appwrite Migrations can help you streamline the process.
+  
+  Here's what you need to know to get started.
 </p>
 
-<h2><a href="#resources" id="resources">Supported Resources</a></h2>
+<h2><a href="#notices" id="notices">Things to keep in mind</a></h2>
+
+<ol class="margin-top margin-bottom-large text-size-normal">
+  <li>Appwrite will not charge usage during migrations, but Firebase may still incur service charges.</li>
+  <li>Appwrite migrations only supports Firestore as a database source. Realtime Database is currently not supported.</li>
+  <li>At the moment only top level document migration is supported. Nested documents will not be transferred automatically.</li>
+  <li>OAuth users will not be transferred. You will need to re-authenticate with your OAuth provider after the migration is complete.</li>
+</ol>
+
+<h2><a href="#resources" id="resources">Supported resource types</a></h2>
 <table>
 <thead>
   <tr>
@@ -35,25 +40,49 @@
 
 <h2><a href="#migration-process" id="migration-process">Migrating to Appwrite from Firebase</a></h2>
 <p>
-    To begin migrating to Appwrite make sure to read the <a href="/docs/migration">migration overview</a> and
-    <a href="#notices">things to keep in mind</a> sections above.
-
-    To begin you can either migrate while creating a new project or go into your project settings and click on the "Migrations" tab.
-
-    Next click on the "Create Migration" button and select "Firebase" as your source.
-
-    <h3><a href="#cloud" id="cloud">Migrating to Appwrite Cloud</a></h3>
-    To simplify the migration process we have created an OAuth application that will allow you to sign in with Google and automatically
-    discover your Firebase projects then you can simply just select the project you want to migrate from.
-
-    <h3><a href="#self-hosted" id="self-hosted">Migrating to Appwrite Self-Hosted</a></h3>
-    If you are self-hosting Appwrite you will need to create a service account in your Firebase project and download the JSON file.
-
-    To create a service account navigate to your Firebase console then click on the gear icon and select "Project Settings".
-    Next click on the "Service Accounts" tab and click on the "Generate New Private Key" button to download the JSON file.
-
-    <!-- TODO: Double check if all permissions are added on the default service account or if we need to add them manually -->
-
-    Once you have the JSON file downloaded you can click on "Manual Authentication" while going through the migration process and\
-    upload the JSON file.
+  To begin migrating to Appwrite make sure to read the <a href="/docs/migration">migration overview</a> 
+  and <a href="#notices">things to keep in mind</a> sections above.
 </p>
+   
+<ol class="margin-top margin-bottom-large text-size-normal">
+  <li>
+    Create a new project and click on the <b>Migrations</b> tab.
+  </li>
+  <li>
+    Click on the <b>Create Migration</b> button and select <b>Firebase</b> as your source.
+  </li>
+  <li>
+    Depending on where your Appwrite project is hosted, you'll need to use different methods to authorize with Firebase.
+  </li>
+</ol>
+
+
+
+<h3><a href="#cloud" id="cloud">Appwrite Cloud</a></h3>
+<p>
+  To simplify the migration process we have created an OAuth application that will allow you to sign in with Google and automatically
+  discover your Firebase projects. Simply select the source project and follow the migration wizard.
+</p>
+
+<h3><a href="#self-hosted" id="self-hosted">Migrating to Appwrite Self-Hosted</a></h3>
+<p>
+  If you are self-hosting Appwrite you will need to create a service account in your Firebase project and download the JSON file.
+</p>
+
+<ol class="margin-top margin-bottom-large text-size-normal">
+  <li>
+    Navigate to your Firebase console.
+  </li>
+  <li>
+    Click the gear icon to access your <b>Project Settings</b>.
+  </li>
+  <li>
+    Click <b>Service Accounts</b>, then <b>Generate New Private Key</b>. Don't share this key with anyone!
+  </li>
+  <li>
+    Once you've downloaded your private key, head back to Appwrite and click <b>Manual Authentication</b>.
+  </li>
+  <li>
+    Upload the JSON private key and follow the wizard.
+  </li>
+</ol>
